; ModuleID = '/home/carl/AnghaBench/seafile/common/index/extr_name-hash.c_add_name_hash.c'
source_filename = "/home/carl/AnghaBench/seafile/common/index/extr_name-hash.c_add_name_hash.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.index_state = type { i64 }
%struct.cache_entry = type { i32 }

@CE_UNHASHED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @add_name_hash(%struct.index_state* %0, %struct.cache_entry* %1) #0 {
  %3 = alloca %struct.index_state*, align 8
  %4 = alloca %struct.cache_entry*, align 8
  store %struct.index_state* %0, %struct.index_state** %3, align 8
  store %struct.cache_entry* %1, %struct.cache_entry** %4, align 8
  %5 = load i32, i32* @CE_UNHASHED, align 4
  %6 = xor i32 %5, -1
  %7 = load %struct.cache_entry*, %struct.cache_entry** %4, align 8
  %8 = getelementptr inbounds %struct.cache_entry, %struct.cache_entry* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = and i32 %9, %6
  store i32 %10, i32* %8, align 4
  %11 = load %struct.index_state*, %struct.index_state** %3, align 8
  %12 = getelementptr inbounds %struct.index_state, %struct.index_state* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %19

15:                                               ; preds = %2
  %16 = load %struct.index_state*, %struct.index_state** %3, align 8
  %17 = load %struct.cache_entry*, %struct.cache_entry** %4, align 8
  %18 = call i32 @hash_index_entry(%struct.index_state* %16, %struct.cache_entry* %17)
  br label %19

19:                                               ; preds = %15, %2
  ret void
}

declare dso_local i32 @hash_index_entry(%struct.index_state*, %struct.cache_entry*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
